# ray-tracing

./: .gitignore  CMakeLists.txt  INTRODUCTION.pptx  ray_tracer
src/helpers/: scene.h
src/raytracer/: light.cpp  light.h  main.cpp  primitive.cpp  primitive.h  raytracer.cpp  raytracer.h
src/scenes/: box.txt  scene.txt
